# Vita-Media-Player

./: .gitignore  CMakeLists.txt  README.md  param.yml
VMP_livearea/livearea/contents/: template.xml
include/: audio.hpp  common.hpp  decoder.hpp  gfx.hpp  input.hpp  menu.hpp  player.hpp  subtitles.hpp  utils.hpp
include/decoders/: mp4dec.hpp
include/menus/: browser.hpp
include/subparsers/: advancedsubstationParser.hpp  subripParser.hpp
modules/: libvita2d_sys.suprx  reAvPlayer.suprx
src/: audio.cpp  commonValues.c  dir.c  fs.c  gfx.cpp  input.cpp  main.c  main.cpp  menumanager.cpp  player.cpp  subtitles.cpp  texture.c  utils.c  utils.cpp
src/avplayer/: avplayer.c  avplayerUtils.c  avsound.c  avsubs.c  overlay.c
src/decoders/: mp4dec.cpp
src/include/: avplayer.h  avsound.h  avsubs.h  common.h  dir.h  fs.h  main.h  overlay.h  texture.h  utils.h
src/menus/: browser.cpp  menuMain.c
